app/assets/stylesheets/partials/profile-page.scss
.profile-container {
  margin-top: 0;
  h1 {
    text-align: left;
  }
}

.profile-top {
  display: inline-block;
  .userpic {
    float: left;
    img {
      display: inline-block;
      margin-right: 10px;
      height: 200px;
      border: $border-color 2px solid;
      padding: 5px;
    }
  }
  .identity {
    display: inline-block;
    float: left;
    h1, h4 {
      text-align: left;
      padding-top: 5px;
      margin: 0;
    }
  }

  .edit-profile {
    margin-top: 5px;
    a {
      font-size: .75em;
      padding-bottom: .5em;
    }
    i {
      color: $link-color;
    }
  }

}

